[tool.poetry]
name = "api-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
commitizen = "^4.10.1"
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
